--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img class="nurxon" src="./images/boubble.jpg" alt="">
     <img class="" src="./images/boubble.jpg" alt="">
 </div>
-<img class="sec-im" src="./images/nurxon-oy.png" alt="">
+<!-- <img class="sec-im" src="./images/nurxon-oy.png" alt=""> -->
 <span>
     <span></span>
     <span></span>
